[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
numpy = "^2.1.1"
pandas = "^2.2.2"
geopandas = "^1.0.1"
matplotlib = "^3.9.2"
topojson = "^1.9"
jupyter-core = "^5.7.2"
openpyxl = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
